crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_list_view_after_zz_recenter_no_color.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: "render_to_styled_text(&state, snapshot_now(), true, 80, 12)"
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│   Acct06 (u06)                        914 994  ██████░░░░   18s  ↪   255 062 │
│   Acct07 (u07)                        914 994  ██████░░░░   18s  ↪   255 062 │
│   Acct08 (u08)                        914 994  ██████░░░░   18s  ↪   255 062 │
│ ▶ Acct09 (u09)                        914 994  ██████░░░░   18s  ↪   255 062 │
│   Acct10 (u10)                        914 994  ██████░░░░   18s  ↪   255 062 │
│   Acct11 (u11)                        914 994  ██████░░░░   18s  ↪   255 062 │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
─── styles ───
(1..27, 0) " Paladin Auth [plaintext] " fg=Reset bg=Reset mod=BOLD
(38..47, 3) "  914 994" fg=Reset bg=Reset mod=BOLD
(67..78, 3) "↪   255 062" fg=Reset bg=Reset mod=DIM
(38..47, 4) "  914 994" fg=Reset bg=Reset mod=BOLD
(67..78, 4) "↪   255 062" fg=Reset bg=Reset mod=DIM
(38..47, 5) "  914 994" fg=Reset bg=Reset mod=BOLD
(67..78, 5) "↪   255 062" fg=Reset bg=Reset mod=DIM
(2..67, 6) "▶ Acct09 (u09)                        914 994  ██████░░░░   18s  " fg=Reset bg=Reset mod=BOLD | REVERSED
(67..78, 6) "↪   255 062" fg=Reset bg=Reset mod=BOLD | DIM | REVERSED
(38..47, 7) "  914 994" fg=Reset bg=Reset mod=BOLD
(67..78, 7) "↪   255 062" fg=Reset bg=Reset mod=DIM
(38..47, 8) "  914 994" fg=Reset bg=Reset mod=BOLD
(67..78, 8) "↪   255 062" fg=Reset bg=Reset mod=DIM
