crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_list_view_mixed_totp_hotp_hidden_and_revealed.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: "render_to_text(&state, snapshot_now(), 80, 12)"
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│   GitHub (ben@example.com)            914 994  ██████░░░░   18s  ↪   255 062 │
│   Bank (savings) (#0)               ▸ press n to advance                     │
│ ▶ VPN (work) (#41)                    654 321                                │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
