crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_list_view_single_totp_no_color.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: "render_to_styled_text(&state, snapshot_now(), true, 80, 12)"
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ GitHub (ben@example.com)            914 994  ██████░░░░   18s  ↪   255 062 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
─── styles ───
(1..27, 0) " Paladin Auth [plaintext] " fg=Reset bg=Reset mod=BOLD
(2..67, 3) "▶ GitHub (ben@example.com)            914 994  ██████░░░░   18s  " fg=Reset bg=Reset mod=BOLD | REVERSED
(67..78, 3) "↪   255 062" fg=Reset bg=Reset mod=BOLD | DIM | REVERSED
